--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<label>Sim.</label>
 			</div>		
 			<div ng-show="view">
-				<label>Nãtesteo.</label>
+				<label>Não.</label>
 			</div>
 		</div>		
 	</body>
