--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<body ng-controller="ctrlAlmoco">
 		<div class="center">
 			<div ng-show="!view">
-				<label>Sim.</label>
+				<label>Yes.</label>
 			</div>		
 			<div ng-show="view">
-				<label>Não.</label>
+				<label>No.</label>
 			</div>
 		</div>		
 	</body>
